--- a/division-client/src/styles/pnnlHeader.module.css
+++ b/division-client/src/styles/pnnlHeader.module.css
@@ -4,7 +4,7 @@
 
 .l-header {
   box-shadow: 0 2px 8px 0 rgb(0 0 0 / 7%);
-  border-top: 8x solid #d77900;
+  border-top: 8px solid #d77900;
   margin-bottom: 1.5rem;
   padding-bottom: 1.5rem;
   padding-top: 1.5rem;
